helm/home-k8s/kustomize/nextcloud/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    component: app
spec:
  ports:
    - port: 80
  selector:
    component: app
