helm/home-k8s/kustomize/nextcloud/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: nextcloud
spec:
  rules:
  - host: nextcloud.andrewpjackson.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app
            port:
              number: 80
  ingressClassName: nginx
  tls:
    - hosts:
        - nextcloud.andrewpjackson.com
      secretName: andrewpjackson.com-tls
